ctxmap-tests/tests/compile_fail/with_immut_key_mut.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/with_immut_key_mut.rs:7:12
  |
7 |     m.with(&KEY_A, &10, |_| {});
  |            ^^^^^^ expected struct `Key`, found struct `ctxmap::helpers::Lazy`
  |
  = note: expected reference `&'static Key<_, _>`
             found reference `&ctxmap::helpers::Lazy<Key<main::Schema, u8, true>>`
